cmake_minimum_required(VERSION 3.28)

add_library(BASIC_DATA_STRUCTURE
        SqList.cpp
        SqList.h
        CLinkList.cpp
        CLinkList.h
        LinkNode.h
        LinkList.cpp
        LinkList.h
        DLinkList.cpp
        DLinkList.h
        CdLinkList.cpp
        CdLinkList.h
        BTTree.cpp
        BTTree.h
        BTTree.cpp
        LinkedStack.cpp
        LinkedStack.h
        LinkQueue.cpp
        LinkQueue.h
        SqStack.cpp
        SqStack.h
        SqQueue.cpp
        SqQueue.h
)